--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,8 +1,7 @@
 django 
 djlint 
 pillow 
-mysqlclient 
+mysqlclient
 django-axes 
 argon2-cffi 
-python-magic 
-python-magic-bin
+python-magic-bin==0.4.14
